# CoveringPointsOnPlane

./: .gitignore  CMakeLists.txt  Class.cpp  Class.h  CoverAlgorithm.cpp  CoverAlgorithm.h  PointsWidget.cpp  PointsWidget.h  README.md  main.cpp  mandatory.txt  optional.txt
Class/: Class.cpp  Class.h
Clasters/: CMakeLists.txt  GenerateClasters.h  GenerateClusters.cpp  main.cpp
Clusters/: CMakeLists.txt  GenerateClusters.cpp  GenerateClusters.h  main.cpp  mandatory.txt  optional.txt
ConvexHall/: CMakeLists.txt  ConvexHall.cpp  ConvexHall.h  main.cpp
CoverAlgorithm/: CMakeLists.txt  CoverAlgorithm.cpp  CoverAlgorithm.h  main.cpp  mandatory.txt  optional.txt
DiskClass/: CMakeLists.txt  DiskClass.cpp  DiskClass.h  main.cpp
GeometryObjectsClass/: CMakeLists.txt  GeometryObjectsClass.cpp  GeometryObjectsClass.h  main.cpp
GreedyAlgorithm/: CoverAlgorithm.cpp  CoverAlgorithm.h
PointClass/: CMakeLists.txt  PointClass.cpp  PointClass.h
RandomPoints/: CMakeLists.txt  RandomPoints.cpp  RandomPoints.h  main.cpp
